[gd_scene load_steps=3 format=3 uid="uid://dyub40xnunb5h"]

[ext_resource type="PackedScene" uid="uid://dmw0yooid24c" path="res://scenes/context_menu_layer/context_menu/context_menu.tscn" id="1_smo7w"]
[ext_resource type="Script" path="res://scenes/context_menu_layer/context_menu/load_context_menu/load_context_menu.gd" id="2_jg8yn"]

[node name="LoadContextMenu" instance=ExtResource("1_smo7w")]
script = ExtResource("2_jg8yn")

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer" index="0"]
layout_mode = 2
text = "Меню загрузки"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="2"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "Удалить"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
text = "Загрузить"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
